<resources>
    <string name="app_name">MyComputer</string>
    <string name="build1">
        1)Устанавливаем БП и прокладываем провода. "\n"
        2)Устанавливаем накопитель SSD M.2, процессор. "\n"
        3)Устанавливаем планки оперативной памяти. "\n"
        4)Устанавливаем материнскую плату в корпус. "\n"
        5)Подключаем провода питания материнской платы. "\n"
        6)Устанавливаем и подключаем корпусные вентиляторы. "\n"
        7)Устанавливаем систему охлаждения на процессор."\n"
        8)Устанавливаем и подключаем жёсткие диски. "\n"
        9)Подключение RGB-ARGB подсветки."\n"
        10)Устанавливаем и подключаем видеокарту."\n"
        11)Подключаем переднюю панель корпуса."\n"
    </string>
    <string name="build2">
        "\t" Это только рекомендации, процесс сборки в каждом случае уникален.
        Он зависит от выбранных компонентов, размера корпуса, форм фактора
        материнской платы и габаритов системы охлаждения. "\n"
        "\t" Если у вас большой корпус, то монтаж можно сразу начать с установки
        материнской платы в корпус, но перед этим обязательно установить
        крепежные элементы для системы охлаждения. Так как не в каждом
        корпусе можно свободно заменить крепежную пластину системы охлаждения
        с обратной стороны. Если корпус маленький, лучше придерживаться
        рекомендаций и установить большую часть компонентов до монтажа
        материнской платы в корпус.
    </string>
    <string name="build3">
        "\t" В мире существуют два производителя процессоров для компьютеров:
        Intel и AMD. Согласно статистике за второй квартал 2017 года, доля
        первой компании на рынке составляет 69%, а второй – 31%. Ещё буквально
        год назад можно было однозначно перечислить плюсы и минусы чипов каждого
        производителя, но недавно всё изменилось – AMD резко рванула вперёд.
        Поэтому ограничимся общими советами по поводу домашнего ПК. "\n"
        "\n"
        - Если ваш бюджет не ограничен, то лучше выбрать Intel. "\n"
        "\n"
        - Если вы собираете максимально бюджетный ПК для домашнего офиса,
        то есть смысл смотреть на решения обеих компаний. Скорее всего, AMD окажется дешевле."\n"
        "\n"
        - Если вы собираете игровой компьютер, то лучше брать Intel. "\n"
        "\n"
        - Если вы собираете ПК для монтажа, рендеринга и других серьёзных задач,
        то отличные решения есть у обеих компаний. Тут всё зависит от видеокарты,
        которую вы решите выбрать для работы. Если NVIDIA, то Intel. Если Radeon, то AMD. "\n"
        "\n"
        "\t" У обеих компаний огромное количество различных линеек процессоров. Запутаться
        в них проще простого. Однако актуальных для домашней сборки чипов не так уж много,
        мы перечислим их специально для вас прямо здесь.
    </string>
    <string name="build4">
        "\t" Чтобы выбранный ранее процессор без проблем установился в соответствующее место на
        материнской плате, нужно знать его типоразмер. По-английски это называется Socket.
        Например, если вы решили построить свой новый ПК на базе чипа Intel Core i5-7600,
        то вам нужна материнская плата с Socket LGA1151. "\n"
        "\n"
        "\t"Разных параметров много, но вам нужны три из них. Первое – форм-фактор. Для домашнего
        ПК это будет либо ATX, либо его уменьшенная версия mATX. Вы уже наверняка догадались,
        что это нужно для дальнейшего выбора корпуса. Второе – количество разъёмов для оперативной
        памяти и максимальный поддерживаемый её объём. Конечно, лучше брать ту плату, в которой
        разъёмов четыре, так вы оставите себе простор для дальнейшего апгрейда машины. Третье –
        количество разъёмов PCI Express для установки видеокарт. Если вы собираете монтажного или
        игрового монстра для 4K-развлечений, то лучше, если их будет два. В остальных случаях хватит
        и одного.
    </string>
    <string name="build5">
        "\t" Здесь нам вновь придётся вернуться к типоразмеру процессора, то есть его Socket. Нужно, чтобы
        у выбранного вами кулера этот параметр был точно таким же. Плюс смотрите на тепловыделение вашего
        процессора – это сокращение TDP. Нужно, чтобы система охлаждения тоже ему соответствовала. "\n"
        "\n"

        "\t" Дальше – дело бюджета. Для домашних компьютеров хватит относительно недорогих кулеров с алюминиевыми
        основаниями и радиаторами, а процессоры Intel Core и Celeron лучше и вовсе покупать в BOX-версиях,
        с включённой в комплект системой охлаждения от производителя. Плюс исторически сложилось, что для
        процессоров AMD лучше раскошелиться на систему охлаждения посерьёзнее, у вот у Intel с тепловыделением
        проблем нет, можно взять и что-то попроще.
    </string>
    <string name="build6">
        Производителей видеокарт для компьютеров на нашей планете тоже два. Первого вы уже запомнили по процессорам
        – это компания AMD с её фирменными видеоадаптерами под названием Radeon. Второй – это компания NVIDIA с
        графическими ускорителями GeForce GTX, и по доле рынка она далеко впереди своего конкурента. В итоге выходит
        так, что Radeon – это для тех, кто пытается сэкономить, а GeForce – для тех, кто хочет максимальной
        производительности и готов за это платить больше. "\n"
        "\n"


        "\t" Для игр в Full HD с приемлемой частотой кадров вам понадобится видеокарта NVIDIA GTX 1050 или GTX 1050 Ti.
        Для более-менее стабильных 60 fps почти везде нужен уже GTX 1060. Если хотите играть в разрешении 1440p или
        подключать к компьютеру VR-шлем, то вам нужно что-то не меньшее, чем GTX 1070 (а лучше – GTX 1080). Ну а
        разговор про плавную игру в 4K начинается с двух GTX 1070/1080 или одной GTX 1080 Ti. "\n"
        "\n"
        "\t" В линейке видеокарт AMD Radeon комфортный гейминг начинается с Radeon RX560, оптимум – это RX570, а об играх
        в разрешении 1440p уместно говорить в случае с RX580. Топовый уровень и 4K – это RX Vega 56 и 64.

    </string>
    <string name="build7">
        "\t" Здесь простор для выбора, пожалуй, самый огромный. С дизайном вы явно определитесь сами, а мы
        сконцентрируемся на технических нюансах. Прежде всего посмотрите на размеры вашей системы
        охлаждения процессора (кулеры бывают очень большими!) и длину видеокарты. И исходя из этих
        параметров оставьте в поиске только те корпуса, в которые эти две запчасти без проблем влезут.
        Как правило, всё крутится вокруг двух форм-факторов: Midi-Tower и Full-Tower. "\n"
        "\n"
        "\t" Затем обратите внимание на материалы корпуса (металл лучше пластика, но может, например, дребезжать),
        систему крепления дисков (винтовая или безвинтовая, второе – удобнее), количество встроенных вентиляторов
        и USB-портов. И, конечно, почитайте отзывы пользователей. Выбор корпуса для ПК – дело максимально
        субъективное. "\n"
        "\n"
        "\t"Важно помнить, что если вы собираете дешёвый компьютер без видеокарты для простого выхода в интернет
        и работы с документами, то можно и корпус брать бюджетный, со встроенным блоком питания. Если вы
        собираете игровой или монтажный компьютер, то вам подойдут только решения без блока питания – его
        вы выберете и установите самостоятельно.
    </string>
    <string name="build8">
        "\t"Если ваш бюджет на сборку компьютера ограничен, то просто покупайте любой HDD с ёмкостью не менее 1 Тб,
        и на первое время вам этого точно хватит. При наличии дополнительных средств можно рассмотреть связку
        из HDD на терабайт и SSD с объёмом не менее 256 Гб. На первом вы будете хранить фото, видео, документы
        и прочие файлы, а на второй установите систему и несколько игр – быстродействие системы (включая скорость
        загрузки компьютера) значительно повысится. Почему не менее 256 Гб? Потому что современные игры порой
        могут весить по 40-60 Гб, а вы явно будете играть не в одну-две из них и захотите установить на
        компьютер немного больше.

    </string>
    <string name="build9">
        "\t" Прежде всего, смотрим на тип памяти: DDR3 уходит в прошлое, в тренде теперь DDR4, хотя первый вариант
        иногда ещё встречается в продаже и может быть актуален для максимально дешёвых офисных ПК.
        Второй параметр – это частота, и вот на неё как раз особо смотреть не стоит. Никакой ощутимой
        разницы в скорости между оперативкой с частотой 2600 МГц и 3600 МГц вы не почувствуете, а денег за
        вторую заплатите гораздо больше. Главное – ниже 2133 МГц не опускайтесь. "\n"
        "\n"

        "\t" В итоге на первое место выходит объём. Меньше, чем 8 Гб, по современным меркам – это не серьёзно, только
        если ваш компьютер не будет печатной машинкой. Оптимум – 16 Гб, идеал – 32 Гб. И тут уместно вспомнить
        о количестве разъёмов для оперативной памяти на выбранной вами материнской плате. Лучше, чтобы их было
        не два, а четыре, тогда объём вы сможете при необходимости нарастить вплоть до 64 или даже 128 Гб. "\n"
        "\n"

        "\t" Продаётся память в виде небольших планок с объёмом 2, 4, 8, 16, 32 (и так далее по нарастающей) гигабайт.
        Нужно покупать эти планки по парам с одинаковой ёмкостью (например, 8 + 8 или 16 + 16 Гб). Вдаваться
        в подробности о том, почему именно так, не будем. Просто помните: так надёжнее. Если же вам всё-таки
        интересно, то это позволяет избежать проблем с совместимостью и таймингами памяти в двухканальном режиме
        работы.
    </string>
    <string name="build10">
        "\t" Главные «пожиратели» энергии внутри вашего компьютера – это процессор и видеокарта. Так что исходя именно
        из их уровня потребления и стоит выбирать мощность блока питания. В интернете есть масса онлайн-калькуляторов,
        но не так уж они и нужны. Просто можно ориентироваться на значение в 500 Вт – примерно столько составляет
        определённое производителями этих компонентов энергопотребление. И оно завышено – производители «железа»
        страхуются. Плюс ещё 100-150 Вт сверху на остальные комплектующие. В итоге блока питания на 600-650 Вт вам
        хватит практически на все случаи жизни, однако всё не так просто. "\n"
        "\n"

        "\t" Когда блок питания работает на пределе возможностей, то он включает встроенный вентилятор.
        Для сборки действительно тихого компьютера стоит брать БП, который будет чаще всего нагружен не
        более чем на 50% своей максимальной мощности. В большинстве случаев для «тихой» сборки хватит
        хорошего 850-ваттника. "\n"
        "\n"

        "\t" Экономить на блоке питания ни в коем случае не стоит: если с этой штукой что-то случится, то и остальные
        комплектующие могут тоже пасть жертвами скачка питания. Выбирайте БП от проверенных производителей,
        читайте сравнительные тесты, но не гонитесь за избытком мощности и сертификатами 80 Plus уровня выше,
        чем Gold или даже Silver. Этот шильдик свидетельствует о хорошем КПД блока питания, но Gold, Platinum и
        Titanium для дома – явно избыточно, а вот Bronze и Silver – в самый раз.
    </string>
    <string name="program_title">
        Здесь находятся основные приложения для вашего компьютера, чтобы перейти на страницу скачивания/покупки
        просто нажмите на название нужного приложения
    </string>
</resources>