<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Сборка ПК"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40px"
                android:text="Рекомендуемый порядок сборки"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/textView4"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="100px"
                android:text="@string/build1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView5"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Выбор процессора"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/intel" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="500px"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/amd" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />




            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Выбор материнской платы"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="500px"
                android:layout_weight="1"
                app:srcCompat="@drawable/motherboard" />
            <TextView
                android:id="@+id/textView9"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Выбор системы охлаждения"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="500px"
                android:layout_weight="1"
                app:srcCompat="@drawable/cool" />
            <TextView
                android:id="@+id/textView11"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Выбор видеокарты"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="500px"
                android:layout_weight="1"
                app:srcCompat="@drawable/video" />
            <TextView
                android:id="@+id/textView13"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build6"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />


            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Выбор корпуса"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="500px"
                android:layout_weight="1"
                app:srcCompat="@drawable/body" />
            <TextView
                android:id="@+id/textView15"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />



            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Выбор устройства хранения данных"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="500px"
                android:layout_weight="1"
                app:srcCompat="@drawable/hdd" />
            <TextView
                android:id="@+id/textView17"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Выбор ОЗУ"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="500px"
                android:layout_weight="1"
                app:srcCompat="@drawable/ozu" />
            <TextView
                android:id="@+id/textView19"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build9"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />


            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Выбор блока питания"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="500px"
                android:layout_weight="1"
                app:srcCompat="@drawable/bp" />
            <TextView
                android:id="@+id/textView21"
                android:paddingLeft="40px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build10"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>